<resources>
    <string name="toolbar_crearcuenta">Crear Cuenta</string>

    <string name="app_name">clubcerveceromona</string>
    <string name="login_usuario">Usuario</string>
    <string name="login_contrasenia">Contraseña</string>
    <string name="login_iniciar">Iniciar Sesión</string>


    <string name="crear_correo">Correo</string>
    <string name="crear_nombre">Nombre</string>
    <string name="crear_usuario">Usuario</string>
    <string name="crear_contrasenia">Contraseña</string>
    <string name="crear_confircontrasenia">Confirmar Contraseña</string>
    <string name="notienecuenta">¿No tienes una cuenta?</string>
    <string name="linkeablecuenta">Crea una aquí</string>

    <string name="toastMensajeLogon">Ingresando</string>

    <string name="tab_casita">Inicio</string>
    <string name="tab_buscar">Buscar</string>
    <string name="tab_perfil">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem">

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce consequat urna id urna laoreet laoreet. Cras efficitur nulla non maximus ullamcorper. Cras sed lacus efficitur lacus luctus condimentum eget id eros. Mauris vehicula fringilla eros, a maximus ligula volutpat gravida. Vivamus viverra, purus sit amet dignissim convallis, nibh lacus venenatis enim, viverra mattis magna lectus pharetra erat. Cras nec nulla tortor. Curabitur luctus et eros sed facilisis. Aenean ornare tristique lorem. Phasellus varius a ex a tristique. Integer tincidunt suscipit eros quis vehicula. Vivamus venenatis magna quis commodo hendrerit. Quisque laoreet rutrum tristique. Quisque molestie odio sit amet lacus volutpat dictum. Vivamus non metus porttitor, convallis est in, sagittis felis. Integer lacinia dolor vel eros vehicula, eget tempor velit pellentesque. Ut pretium non erat eget vehicula.
Sed in commodo magna. Cras leo nisi, lacinia at vestibulum cursus, luctus quis felis. Fusce eu auctor elit. Donec tortor nibh, feugiat a neque ut, consectetur semper lorem. Aenean et massa a metus ultricies fermentum. Nullam felis turpis, luctus a egestas ac, ultricies id justo. Aenean sollicitudin pharetra orci nec efficitur. Nullam in semper dui. Fusce fringilla commodo nulla ac scelerisque. Vestibulum consectetur vehicula lacus, sed dapibus purus rutrum a. Nam nec laoreet dolor, vel hendrerit turpis. Sed eget tincidunt mauris. Donec ultricies neque in purus laoreet mattis. Mauris nec tellus in orci molestie cursus. Sed sed semper lectus. Fusce diam felis, dignissim eu ullamcorper id, auctor sed arcu.
Mauris non accumsan magna, ac efficitur nisl. Vivamus sit amet nibh sed lorem auctor interdum sit amet at tortor. Donec sit amet felis facilisis, maximus lectus ac, ultricies ex. Phasellus mattis mattis orci, sit amet finibus ex. Suspendisse aliquet libero vitae tellus tempor, ac accumsan massa scelerisque. Integer at felis condimentum nulla vestibulum gravida vel vitae enim. Nunc ac enim suscipit, sollicitudin quam sed, vehicula leo. Nulla vulputate, lectus a molestie tempus, lorem neque pellentesque nisi, id iaculis sapien sem varius ipsum. Ut ipsum justo, condimentum quis urna sit amet, suscipit elementum ante. Integer in mauris venenatis nulla euismod tempus nec in nisl.
Suspendisse consequat at ipsum sit amet tempor. Ut vel viverra nisi, in tempus enim. Nam interdum felis arcu, nec laoreet lacus aliquet et. Integer est massa, euismod ut efficitur at, rutrum in dolor. Morbi laoreet lobortis tempus. Maecenas fermentum vel tortor finibus pellentesque. Suspendisse elementum enim interdum dignissim porta. Vestibulum non gravida neque, ut tristique elit. Vivamus tempor nibh ac molestie scelerisque. Nunc lectus ipsum, eleifend vitae nunc sit amet, mollis molestie velit. Cras ac magna vel diam tristique mattis. Nunc at tellus a mauris malesuada laoreet id a nisi. Suspendisse in ligula posuere, blandit lacus nec, sagittis tellus.
Aliquam luctus purus ac mauris pulvinar, ut aliquam ligula vehicula. Aenean dictum tellus eu tempor sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Fusce varius efficitur dui id blandit. Nullam consectetur, mauris quis lacinia tincidunt, elit felis feugiat purus, et egestas odio nisi vitae libero. Suspendisse eleifend rutrum ipsum cursus ornare. Ut consectetur, tortor nec lobortis ornare, justo tellus vulputate odio, a semper est quam sed turpis. </string>
    <string name="title_activity_maps">Map</string>


</resources>
