<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateAccountActivity"
    android:background="@drawable/fonocrearcuentabn">

    <include layout="@layout/barradeaccion"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/paddingLinearLayout"
            android:theme="@style/AppCrearCuenta"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTextoBlanco"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textoInputCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crear_correo"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorTextoBlanco"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTextoBlanco"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textoInputNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crear_nombre"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorTextoBlanco"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTextoBlanco"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textoInputContrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crear_contrasenia"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:textColor="@color/colorTextoBlanco"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorTextoBlanco"
                android:paddingBottom="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputContraseniaConfirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/crear_confircontrasenia"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorTextoBlanco"
                    android:textSize="20sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/botonCrearCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:height="55dp"
                android:text="@string/login_iniciar"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>