<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lagashbeer"
    tools:context=".LoginActivity"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/paddingLinearLayout"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorTextoBlanco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLogCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Correo"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColor="@color/colorTextoBlanco"
                android:textSize="@dimen/tamanioInputPpalTexto" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/tamanioSecundario"
            android:textColorHint="@color/colorTextoBlanco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLogContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_contrasenia"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorTextoBlanco"
                android:textSize="@dimen/tamanioInputPpalTexto" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/botonIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopBoton"
            android:layout_marginBottom="@dimen/tamanioSecundario"
            android:height="60dp"
            android:text="@string/login_iniciar"
            android:textSize="@dimen/tamanioSecundario" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8sp"
                android:layout_marginRight="8sp"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/notienecuenta"
                android:textAlignment="textEnd"
                android:textSize="@dimen/tamanioSecundario"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/linkeablecuenta"
                android:textSize="@dimen/tamanioSecundario"
                android:textStyle="bold"
                android:onClick="onCrearCuenta"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>